--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
   "homepage": "https://github.com/lanacioncom/ganancias2017#readme",
   "dependencies": {
     "gulp": "^3.9.1",
-    "gulp-connect": "^5.0.0"
+    "gulp-connect": "^5.0.0",
+    "gulp-rename": "^1.2.2"
+  },
+  "devDependencies": {
+    "gulp-uglify": "^3.0.0"
   }
 }
