--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
   "dependencies": {
     "gulp": "^3.9.1",
     "gulp-connect": "^5.0.0",
-    "gulp-rename": "^1.2.2"
+    "gulp-rename": "^1.2.2",
+    "gulp-s3": "^0.11.0",
+    "opn": "^5.1.0"
   },
   "devDependencies": {
     "gulp-uglify": "^3.0.0"
